lessons/138-go-vs-rust-performance-benchmark/rust-app/deploy/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: staging
  name: rust-app
  labels:
    app: rust-app
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8000
    protocol: TCP
  selector:
    app: rust-app
